<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="reverseApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reverse Words" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVO-Ke-KYT">
                                <rect key="frame" x="20" y="84" width="374" height="41"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="34"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This application will reverse your words. Please type text below" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P9u-qm-oOC">
                                <rect key="frame" x="20" y="145" width="374" height="41"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to reverse" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yUY-gB-J2C">
                                <rect key="frame" x="20" y="246" width="374" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Ym3-ns-gKN"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="b1G-Ta-uQx"/>
                                </connections>
                            </textField>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="EyD-Sd-T2s">
                                <rect key="frame" x="20" y="296" width="374" height="32"/>
                                <segments>
                                    <segment title="Default"/>
                                    <segment title="Custom"/>
                                </segments>
                                <connections>
                                    <action selector="segmentChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="7SO-kX-M7y"/>
                                </connections>
                            </segmentedControl>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e3f-bB-DCt" customClass="ExceptionWord" customModule="reverseApp" customModuleProvider="target">
                                <rect key="frame" x="20" y="407" width="374" height="50"/>
                                <color key="backgroundColor" systemColor="systemGray2Color"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="hhm-eF-Z72"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All characters except alphabetic symbols" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="psQ-k9-aLy">
                                <rect key="frame" x="20" y="347" width="374" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="M9f-eS-CSh"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ath-fS-qoX">
                                <rect key="frame" x="36" y="792" width="342" height="50"/>
                                <color key="backgroundColor" name="AccentColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="g0H-9c-fYI"/>
                                </constraints>
                                <state key="normal" title="Result">
                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="resultButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FSo-NO-Ak0"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lor-YH-Re1">
                                <rect key="frame" x="20" y="487" width="374" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="Qj7-Vc-JC4"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <color key="textColor" name="AccentColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="psQ-k9-aLy" firstAttribute="top" secondItem="EyD-Sd-T2s" secondAttribute="bottom" constant="20" id="122-mj-7mA"/>
                            <constraint firstItem="P9u-qm-oOC" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="2Jh-e2-k83"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lor-YH-Re1" secondAttribute="trailing" constant="20" id="5IQ-I5-1oA"/>
                            <constraint firstItem="yUY-gB-J2C" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6Mh-vx-hR0"/>
                            <constraint firstItem="Ath-fS-qoX" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="702-Qu-Qfc"/>
                            <constraint firstItem="gVO-Ke-KYT" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="7AJ-kj-PST"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yUY-gB-J2C" secondAttribute="trailing" constant="20" id="8af-6q-HKl"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Ath-fS-qoX" secondAttribute="bottom" constant="20" id="9Pg-uL-oB9"/>
                            <constraint firstItem="EyD-Sd-T2s" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="CnF-Kz-2ik"/>
                            <constraint firstItem="P9u-qm-oOC" firstAttribute="top" secondItem="gVO-Ke-KYT" secondAttribute="bottom" constant="20" id="FNC-cM-8jx"/>
                            <constraint firstItem="e3f-bB-DCt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ira-G8-z03"/>
                            <constraint firstItem="yUY-gB-J2C" firstAttribute="top" secondItem="P9u-qm-oOC" secondAttribute="bottom" constant="60" id="K7I-sb-Qbv"/>
                            <constraint firstItem="P9u-qm-oOC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="MfF-mG-f3b"/>
                            <constraint firstItem="gVO-Ke-KYT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="RrS-fd-3re"/>
                            <constraint firstItem="e3f-bB-DCt" firstAttribute="top" secondItem="psQ-k9-aLy" secondAttribute="bottom" id="Sbl-rD-BhO"/>
                            <constraint firstItem="lor-YH-Re1" firstAttribute="top" secondItem="e3f-bB-DCt" secondAttribute="bottom" constant="30" id="WqL-wt-4Tl"/>
                            <constraint firstItem="lor-YH-Re1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ZUP-4L-PDN"/>
                            <constraint firstItem="EyD-Sd-T2s" firstAttribute="top" secondItem="yUY-gB-J2C" secondAttribute="bottom" constant="20" id="akp-jb-oo4"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="e3f-bB-DCt" secondAttribute="trailing" constant="20" id="cct-zA-agJ"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="P9u-qm-oOC" secondAttribute="trailing" constant="20" id="fEt-Dr-Mtz"/>
                            <constraint firstItem="psQ-k9-aLy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="fP3-5R-6tq"/>
                            <constraint firstItem="Ath-fS-qoX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="36" id="k9C-sD-fuP"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="psQ-k9-aLy" secondAttribute="trailing" constant="20" id="mdx-Tw-QhW"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gVO-Ke-KYT" secondAttribute="trailing" constant="20" id="ulT-oN-MCF"/>
                            <constraint firstItem="gVO-Ke-KYT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="wBK-gb-zPC"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EyD-Sd-T2s" secondAttribute="trailing" constant="20" id="y1O-zT-3Tb"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="fieldContainerView" destination="e3f-bB-DCt" id="BKf-Cr-Ach"/>
                        <outlet property="infoLabel" destination="psQ-k9-aLy" id="K56-zR-TAo"/>
                        <outlet property="resultButton" destination="Ath-fS-qoX" id="FZh-sA-ozn"/>
                        <outlet property="reversedText" destination="lor-YH-Re1" id="BRT-bH-Uva"/>
                        <outlet property="textField" destination="yUY-gB-J2C" id="Msb-1v-bVZ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="17.39130434782609" y="75"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="AccentColor">
            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemGray2Color">
            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
